# Harjoitustyo_connect4

./: README.md  pyproject.toml  specification_document.md
documentation/: implementation_document.md  testing_document.md  user_guide.md  week_1_report.md  week_2_report.md  week_3_report.md  week_4_report.md
documentation/week_reports/: week_1_report.md  week_2_report.md  week_3_report.md  week_5_report.md  week_6_report.md
src/: ai.py  board.py  main.py  player.py
src/tests/: ai_test.py  board_test.py  player_test.py  test_base.py
